--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^1.1.2",
+        "axios": "^1.5.0",
         "laravel-vite-plugin": "^0.8.0",
         "vite": "^4.0.0"
     },
@@ -17,8 +17,13 @@
         "@fortawesome/free-solid-svg-icons": "^6.4.2",
         "@fortawesome/vue-fontawesome": "^3.0.3",
         "@vitejs/plugin-vue": "^4.3.4",
+        "@vuesimple/vs-pagination": "^1.4.13",
+        "laravel-vue-pagination": "^4.1.1",
+        "sweetalert2": "^11.7.28",
         "vue": "^3.2.36",
         "vue-loader": "^17.2.2",
-        "vue-router": "^4.0.13"
+        "vue-router": "^4.0.13",
+        "vue-sweetalert2": "^5.0.5",
+        "vue-toast-notification": "^3.1.1"
     }
 }
